[workspace]
members = [
  "prenum",
  "prenum-macros",
  "trie-rs"
]

[package]
name = "somsed"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {version = "0.12.1", features = ["canvas", "webgl"]}
thiserror = "1.0.63"
wasm-bindgen = "0.2.92"
reqwest = { version = "0.12.5", features = ["json"] }
console_error_panic_hook = "0.1.7"
strum = {version = "0.26", features = ["derive"]}
trie-rs = {path = "./trie-rs/"}
pest = "2.7"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "Document",
    "Window",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[profile.dev.package."*"]
opt-level = 3
