[workspace]
members = ["desmoxide"]

[package]
name = "somsed"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {git = "https://github.com/iced-rs/iced/", features = ["canvas", "webgl", "tokio"]}
thiserror = "1.0.63"
wasm-bindgen = "0.2.92"
futures-lite = "2.3"
reqwest = { version = "0.12.5", features = ["json"] }
console_error_panic_hook = "0.1.7"
strum = {version = "0.26", features = ["derive"]}
desmoxide = {path = "./desmoxide/"}
anyhow = "1.0"
serde_json = "1.0"
clap = { version = "4.5.16", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Document",
    "Window",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[profile.dev.package."*"]
opt-level = 3
